// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrossLib Structure Sanitization Tests (valid structures): ((((((((((((((((....)))))))((((.(((((((((((......)))))[[[[[[.)))))).))))(((((((((((((.((.(.....(......(((.(((((((((((.((((.(((((..]]]]]].))))).)))).))(((((((....)))))))(((((((((....)))))))(((((((....)))))))(((.(.((((((((((......)))))[[[[[[.))))).).)))))))))))))).)))..............)..).)).)))))))))))(((((((.(((((..]]]]]].))))).)))))))(((((((....)))))))))))))))))) 1`] = `
[
  362,
  361,
  360,
  359,
  358,
  357,
  356,
  355,
  354,
  26,
  25,
  24,
  23,
  22,
  21,
  20,
  -1,
  -1,
  -1,
  -1,
  15,
  14,
  13,
  12,
  11,
  10,
  9,
  71,
  70,
  69,
  68,
  -1,
  66,
  65,
  64,
  63,
  62,
  61,
  53,
  52,
  51,
  50,
  49,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  42,
  41,
  40,
  39,
  38,
  135,
  134,
  133,
  132,
  131,
  130,
  -1,
  37,
  36,
  35,
  34,
  33,
  32,
  -1,
  30,
  29,
  28,
  27,
  353,
  352,
  298,
  297,
  296,
  295,
  294,
  293,
  292,
  291,
  290,
  289,
  288,
  -1,
  286,
  285,
  -1,
  283,
  -1,
  -1,
  -1,
  -1,
  -1,
  280,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  265,
  264,
  263,
  -1,
  261,
  260,
  259,
  258,
  257,
  256,
  255,
  254,
  253,
  149,
  148,
  -1,
  146,
  145,
  144,
  143,
  -1,
  141,
  140,
  139,
  138,
  137,
  -1,
  -1,
  59,
  58,
  57,
  56,
  55,
  54,
  -1,
  127,
  126,
  125,
  124,
  123,
  -1,
  121,
  120,
  119,
  118,
  -1,
  116,
  115,
  167,
  166,
  165,
  164,
  163,
  162,
  161,
  -1,
  -1,
  -1,
  -1,
  156,
  155,
  154,
  153,
  152,
  151,
  150,
  252,
  251,
  187,
  186,
  185,
  184,
  183,
  182,
  181,
  -1,
  -1,
  -1,
  -1,
  176,
  175,
  174,
  173,
  172,
  171,
  170,
  205,
  204,
  203,
  202,
  201,
  200,
  199,
  -1,
  -1,
  -1,
  -1,
  194,
  193,
  192,
  191,
  190,
  189,
  188,
  250,
  249,
  248,
  -1,
  246,
  -1,
  244,
  243,
  242,
  241,
  240,
  232,
  231,
  230,
  229,
  228,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  221,
  220,
  219,
  218,
  217,
  319,
  318,
  317,
  316,
  315,
  314,
  -1,
  216,
  215,
  214,
  213,
  212,
  -1,
  210,
  -1,
  208,
  207,
  206,
  169,
  168,
  114,
  113,
  112,
  111,
  110,
  109,
  108,
  107,
  106,
  -1,
  104,
  103,
  102,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  95,
  -1,
  -1,
  89,
  -1,
  87,
  86,
  -1,
  84,
  83,
  82,
  81,
  80,
  79,
  78,
  77,
  76,
  75,
  74,
  333,
  332,
  331,
  330,
  329,
  328,
  327,
  -1,
  325,
  324,
  323,
  322,
  321,
  -1,
  -1,
  238,
  237,
  236,
  235,
  234,
  233,
  -1,
  311,
  310,
  309,
  308,
  307,
  -1,
  305,
  304,
  303,
  302,
  301,
  300,
  299,
  351,
  350,
  349,
  348,
  347,
  346,
  345,
  -1,
  -1,
  -1,
  -1,
  340,
  339,
  338,
  337,
  336,
  335,
  334,
  73,
  72,
  8,
  7,
  6,
  5,
  4,
  3,
  2,
  1,
  0,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): ((((((((...........)).)))))) 1`] = `
[
  27,
  26,
  25,
  24,
  23,
  22,
  20,
  19,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  7,
  6,
  -1,
  5,
  4,
  3,
  2,
  1,
  0,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): (((((((([.{)][..((.{]).)(.}).}))))))) 1`] = `
[
  36,
  35,
  34,
  33,
  32,
  31,
  30,
  11,
  12,
  -1,
  29,
  7,
  8,
  20,
  -1,
  -1,
  23,
  21,
  -1,
  26,
  13,
  17,
  -1,
  16,
  27,
  -1,
  19,
  24,
  -1,
  10,
  6,
  5,
  4,
  3,
  2,
  1,
  0,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): (((((......))))) 1`] = `
[
  15,
  14,
  13,
  12,
  11,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  4,
  3,
  2,
  1,
  0,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): (((.((((((((..((((.(((((....)).)))..))))..))))((((...))))))))...))) 1`] = `
[
  66,
  65,
  64,
  -1,
  60,
  59,
  58,
  57,
  45,
  44,
  43,
  42,
  -1,
  -1,
  39,
  38,
  37,
  36,
  -1,
  33,
  32,
  31,
  29,
  28,
  -1,
  -1,
  -1,
  -1,
  23,
  22,
  -1,
  21,
  20,
  19,
  -1,
  -1,
  17,
  16,
  15,
  14,
  -1,
  -1,
  11,
  10,
  9,
  8,
  56,
  55,
  54,
  53,
  -1,
  -1,
  -1,
  49,
  48,
  47,
  46,
  7,
  6,
  5,
  4,
  -1,
  -1,
  -1,
  2,
  1,
  0,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): (((..[[[.(((...))))))]]] 1`] = `
[
  20,
  19,
  18,
  -1,
  -1,
  23,
  22,
  21,
  -1,
  17,
  16,
  15,
  -1,
  -1,
  -1,
  11,
  10,
  9,
  2,
  1,
  0,
  7,
  6,
  5,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): (((.[[[.(((...))).]]].))) 1`] = `
[
  24,
  23,
  22,
  -1,
  20,
  19,
  18,
  -1,
  16,
  15,
  14,
  -1,
  -1,
  -1,
  10,
  9,
  8,
  -1,
  6,
  5,
  4,
  -1,
  2,
  1,
  0,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): ((.(.(.((.(.....).)).)....(((((((((((....)))))))))))......)((((((((((...{{{{.)))))))))).(((((((((((....))))).))))))...)[}}}}..[[[[[[[[[[[[[)...]]]]]]]]]]]]]...]................. 1`] = `
[
  139,
  118,
  -1,
  58,
  -1,
  21,
  -1,
  19,
  18,
  -1,
  16,
  -1,
  -1,
  -1,
  -1,
  -1,
  10,
  -1,
  8,
  7,
  -1,
  5,
  -1,
  -1,
  -1,
  -1,
  51,
  50,
  49,
  48,
  47,
  46,
  45,
  44,
  43,
  42,
  41,
  -1,
  -1,
  -1,
  -1,
  36,
  35,
  34,
  33,
  32,
  31,
  30,
  29,
  28,
  27,
  26,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  3,
  86,
  85,
  84,
  83,
  82,
  81,
  80,
  79,
  78,
  77,
  -1,
  -1,
  -1,
  123,
  122,
  121,
  120,
  -1,
  68,
  67,
  66,
  65,
  64,
  63,
  62,
  61,
  60,
  59,
  -1,
  114,
  113,
  112,
  111,
  110,
  109,
  107,
  106,
  105,
  104,
  103,
  -1,
  -1,
  -1,
  -1,
  98,
  97,
  96,
  95,
  94,
  -1,
  93,
  92,
  91,
  90,
  89,
  88,
  -1,
  -1,
  -1,
  1,
  159,
  75,
  74,
  73,
  72,
  -1,
  -1,
  155,
  154,
  153,
  152,
  151,
  150,
  149,
  148,
  147,
  146,
  145,
  144,
  143,
  0,
  -1,
  -1,
  -1,
  138,
  137,
  136,
  135,
  134,
  133,
  132,
  131,
  130,
  129,
  128,
  127,
  126,
  -1,
  -1,
  -1,
  119,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): ([{<a.aaa....)]}>AAA.A 1`] = `
[
  13,
  14,
  15,
  16,
  21,
  -1,
  19,
  18,
  17,
  -1,
  -1,
  -1,
  -1,
  0,
  1,
  2,
  3,
  8,
  7,
  6,
  -1,
  4,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): .(((((((((.((((....))))....((((....))))..))))..(((((......)))))...(((.((.(((((((((((((...((((..((((.....))))...)))).))))))))))))))).)))..))))).. 1`] = `
[
  -1,
  141,
  140,
  139,
  138,
  137,
  44,
  43,
  42,
  41,
  -1,
  22,
  21,
  20,
  19,
  -1,
  -1,
  -1,
  -1,
  14,
  13,
  12,
  11,
  -1,
  -1,
  -1,
  -1,
  38,
  37,
  36,
  35,
  -1,
  -1,
  -1,
  -1,
  30,
  29,
  28,
  27,
  -1,
  -1,
  9,
  8,
  7,
  6,
  -1,
  -1,
  62,
  61,
  60,
  59,
  58,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  51,
  50,
  49,
  48,
  47,
  -1,
  -1,
  -1,
  134,
  133,
  132,
  -1,
  130,
  129,
  -1,
  128,
  127,
  126,
  125,
  124,
  123,
  122,
  121,
  120,
  119,
  118,
  117,
  116,
  -1,
  -1,
  -1,
  114,
  113,
  112,
  111,
  -1,
  -1,
  107,
  106,
  105,
  104,
  -1,
  -1,
  -1,
  -1,
  -1,
  98,
  97,
  96,
  95,
  -1,
  -1,
  -1,
  92,
  91,
  90,
  89,
  -1,
  85,
  84,
  83,
  82,
  81,
  80,
  79,
  78,
  77,
  76,
  75,
  74,
  73,
  71,
  70,
  -1,
  68,
  67,
  66,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  -1,
  -1,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): ..((...((.........))......(((((((....))))))).(((((((....))))))).(((((((....))))))).(((((((((....)))))))))..(((((((....)))))))..(((((((....)))))))...[[[[[[[......[[[[[[[[......[[.....)).....((..........]]......]]]]]]]]......................))..............]]]]]]].....(((((((....)))))))...................... 1`] = `
[
  -1,
  -1,
  183,
  182,
  -1,
  -1,
  -1,
  19,
  18,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  8,
  7,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  43,
  42,
  41,
  40,
  39,
  38,
  37,
  -1,
  -1,
  -1,
  -1,
  32,
  31,
  30,
  29,
  28,
  27,
  26,
  -1,
  62,
  61,
  60,
  59,
  58,
  57,
  56,
  -1,
  -1,
  -1,
  -1,
  51,
  50,
  49,
  48,
  47,
  46,
  45,
  -1,
  81,
  80,
  79,
  78,
  77,
  76,
  75,
  -1,
  -1,
  -1,
  -1,
  70,
  69,
  68,
  67,
  66,
  65,
  64,
  -1,
  104,
  103,
  102,
  101,
  100,
  99,
  98,
  97,
  96,
  -1,
  -1,
  -1,
  -1,
  91,
  90,
  89,
  88,
  87,
  86,
  85,
  84,
  83,
  -1,
  -1,
  124,
  123,
  122,
  121,
  120,
  119,
  118,
  -1,
  -1,
  -1,
  -1,
  113,
  112,
  111,
  110,
  109,
  108,
  107,
  -1,
  -1,
  144,
  143,
  142,
  141,
  140,
  139,
  138,
  -1,
  -1,
  -1,
  -1,
  133,
  132,
  131,
  130,
  129,
  128,
  127,
  -1,
  -1,
  -1,
  261,
  260,
  259,
  258,
  257,
  256,
  255,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  216,
  215,
  214,
  213,
  212,
  211,
  210,
  209,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  202,
  201,
  -1,
  -1,
  -1,
  -1,
  -1,
  3,
  2,
  -1,
  -1,
  -1,
  -1,
  -1,
  240,
  239,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  176,
  175,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  168,
  167,
  166,
  165,
  164,
  163,
  162,
  161,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  190,
  189,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  154,
  153,
  152,
  151,
  150,
  149,
  148,
  -1,
  -1,
  -1,
  -1,
  -1,
  284,
  283,
  282,
  281,
  280,
  279,
  278,
  -1,
  -1,
  -1,
  -1,
  273,
  272,
  271,
  270,
  269,
  268,
  267,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): .....((((((.....))))))....(((((((((((....)))))))))))........((((((((((.<<<<<))))))))))(((((((((((((....))))).))))))))...>>>>>.(((((((((((((....)))))))))))))..................... 1`] = `
[
  -1,
  -1,
  -1,
  -1,
  -1,
  21,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  -1,
  -1,
  10,
  9,
  8,
  7,
  6,
  5,
  -1,
  -1,
  -1,
  -1,
  51,
  50,
  49,
  48,
  47,
  46,
  45,
  44,
  43,
  42,
  41,
  -1,
  -1,
  -1,
  -1,
  36,
  35,
  34,
  33,
  32,
  31,
  30,
  29,
  28,
  27,
  26,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  85,
  84,
  83,
  82,
  81,
  80,
  79,
  78,
  77,
  76,
  -1,
  124,
  123,
  122,
  121,
  120,
  69,
  68,
  67,
  66,
  65,
  64,
  63,
  62,
  61,
  60,
  116,
  115,
  114,
  113,
  112,
  111,
  110,
  109,
  107,
  106,
  105,
  104,
  103,
  -1,
  -1,
  -1,
  -1,
  98,
  97,
  96,
  95,
  94,
  -1,
  93,
  92,
  91,
  90,
  89,
  88,
  87,
  86,
  -1,
  -1,
  -1,
  75,
  74,
  73,
  72,
  71,
  -1,
  155,
  154,
  153,
  152,
  151,
  150,
  149,
  148,
  147,
  146,
  145,
  144,
  143,
  -1,
  -1,
  -1,
  -1,
  138,
  137,
  136,
  135,
  134,
  133,
  132,
  131,
  130,
  129,
  128,
  127,
  126,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): .....((((((.....))))))....(((((([[[[[[[[[[[........))))))]]]]]]]]]]]........(((((((....)))))))..................... 1`] = `
[
  -1,
  -1,
  -1,
  -1,
  -1,
  21,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  -1,
  -1,
  10,
  9,
  8,
  7,
  6,
  5,
  -1,
  -1,
  -1,
  -1,
  56,
  55,
  54,
  53,
  52,
  51,
  67,
  66,
  65,
  64,
  63,
  62,
  61,
  60,
  59,
  58,
  57,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  31,
  30,
  29,
  28,
  27,
  26,
  42,
  41,
  40,
  39,
  38,
  37,
  36,
  35,
  34,
  33,
  32,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  93,
  92,
  91,
  90,
  89,
  88,
  87,
  -1,
  -1,
  -1,
  -1,
  82,
  81,
  80,
  79,
  78,
  77,
  76,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): .....(.((.(.....).)).)....(.((..({(<.{.a.a{........(..(((((.(.[....).)))).)...)).).}).((.(}...}...)>)).A.A...).)..............(((((((((((.(....).)))))))))))............]........ 1`] = `
[
  -1,
  -1,
  -1,
  -1,
  -1,
  21,
  -1,
  19,
  18,
  -1,
  16,
  -1,
  -1,
  -1,
  -1,
  -1,
  10,
  -1,
  8,
  7,
  -1,
  5,
  -1,
  -1,
  -1,
  -1,
  111,
  -1,
  109,
  84,
  -1,
  -1,
  81,
  94,
  79,
  99,
  -1,
  90,
  -1,
  105,
  -1,
  103,
  83,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  78,
  -1,
  -1,
  74,
  72,
  71,
  70,
  69,
  -1,
  67,
  -1,
  168,
  -1,
  -1,
  -1,
  -1,
  60,
  -1,
  58,
  57,
  56,
  55,
  -1,
  54,
  -1,
  -1,
  -1,
  51,
  34,
  -1,
  32,
  -1,
  42,
  29,
  -1,
  101,
  100,
  -1,
  98,
  37,
  -1,
  -1,
  -1,
  33,
  -1,
  -1,
  -1,
  89,
  35,
  87,
  86,
  -1,
  41,
  -1,
  39,
  -1,
  -1,
  -1,
  28,
  -1,
  26,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  155,
  154,
  153,
  152,
  151,
  150,
  149,
  148,
  147,
  146,
  145,
  -1,
  143,
  -1,
  -1,
  -1,
  -1,
  138,
  -1,
  136,
  135,
  134,
  133,
  132,
  131,
  130,
  129,
  128,
  127,
  126,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  62,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): ...... 1`] = `
[
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`CrossLib Structure Sanitization Tests (valid structures): .....[[[[[[.....]]]]]]....[[[[[[[[[[[....]]]]]]]]]]].......(((((((((((.[[[[[)))))))))))[[[[[[[[[[[[....]]]]].]]]]]]]....]]]]].[[[[[[[[[[[[[....]]]]]]]]]]]]]..................... 1`] = `
[
  -1,
  -1,
  -1,
  -1,
  -1,
  21,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  -1,
  -1,
  10,
  9,
  8,
  7,
  6,
  5,
  -1,
  -1,
  -1,
  -1,
  51,
  50,
  49,
  48,
  47,
  46,
  45,
  44,
  43,
  42,
  41,
  -1,
  -1,
  -1,
  -1,
  36,
  35,
  34,
  33,
  32,
  31,
  30,
  29,
  28,
  27,
  26,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  86,
  85,
  84,
  83,
  82,
  81,
  80,
  79,
  78,
  77,
  76,
  -1,
  124,
  123,
  122,
  121,
  120,
  69,
  68,
  67,
  66,
  65,
  64,
  63,
  62,
  61,
  60,
  59,
  115,
  114,
  113,
  112,
  111,
  110,
  109,
  107,
  106,
  105,
  104,
  103,
  -1,
  -1,
  -1,
  -1,
  98,
  97,
  96,
  95,
  94,
  -1,
  93,
  92,
  91,
  90,
  89,
  88,
  87,
  -1,
  -1,
  -1,
  -1,
  75,
  74,
  73,
  72,
  71,
  -1,
  155,
  154,
  153,
  152,
  151,
  150,
  149,
  148,
  147,
  146,
  145,
  144,
  143,
  -1,
  -1,
  -1,
  -1,
  138,
  137,
  136,
  135,
  134,
  133,
  132,
  131,
  130,
  129,
  128,
  127,
  126,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): ((((((......)))))) 1`] = `
[
  17,
  16,
  15,
  14,
  13,
  12,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  0,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): ((((((...{{[[{{...)))]])))}}}} 1`] = `
[
  25,
  24,
  23,
  20,
  19,
  18,
  -1,
  -1,
  -1,
  29,
  28,
  22,
  21,
  27,
  26,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  12,
  11,
  2,
  1,
  0,
  14,
  13,
  10,
  9,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): ((((((...{{{{...))))))}}}} 1`] = `
[
  21,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  25,
  24,
  23,
  22,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  0,
  12,
  11,
  10,
  9,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): ((((((.[[..[[..{{.]]]]{.{...))))).)}}}.} 1`] = `
[
  34,
  32,
  31,
  30,
  29,
  28,
  -1,
  21,
  20,
  -1,
  -1,
  19,
  18,
  -1,
  -1,
  39,
  37,
  -1,
  12,
  11,
  8,
  7,
  36,
  -1,
  35,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  -1,
  0,
  24,
  22,
  16,
  -1,
  15,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): ((((((.[[[[..{{]]]]{{...))))))}}}} 1`] = `
[
  29,
  28,
  27,
  26,
  25,
  24,
  -1,
  18,
  17,
  16,
  15,
  -1,
  -1,
  33,
  32,
  10,
  9,
  8,
  7,
  31,
  30,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  0,
  20,
  19,
  14,
  13,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): (((((({{{{......}}}})))))) 1`] = `
[
  25,
  24,
  23,
  22,
  21,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  9,
  8,
  7,
  6,
  5,
  4,
  3,
  2,
  1,
  0,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): ([{<abcdefghijklmnopqrstuvwxyz....)]}>ABCDEFGHIJKLMNOPQRSTUVWXYZ 1`] = `
[
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  -1,
  -1,
  -1,
  -1,
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): .(((((...{{{{...))))).}}}}....((((....)))) 1`] = `
[
  -1,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  25,
  24,
  23,
  22,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  -1,
  12,
  11,
  10,
  9,
  -1,
  -1,
  -1,
  -1,
  41,
  40,
  39,
  38,
  -1,
  -1,
  -1,
  -1,
  33,
  32,
  31,
  30,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): ......................... 1`] = `
[
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): .aaaaa...bbbb...AAAAA.BBBB....aaaa....AAAA 1`] = `
[
  -1,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  25,
  24,
  23,
  22,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  -1,
  12,
  11,
  10,
  9,
  -1,
  -1,
  -1,
  -1,
  41,
  40,
  39,
  38,
  -1,
  -1,
  -1,
  -1,
  33,
  32,
  31,
  30,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): aaaaaa......AAAAAA 1`] = `
[
  17,
  16,
  15,
  14,
  13,
  12,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  0,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): aaaaaa...bbbb...AAAAAABBBB 1`] = `
[
  21,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  25,
  24,
  23,
  22,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  0,
  12,
  11,
  10,
  9,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): aaaaaa...bbccbb...AAACCAAABBBB 1`] = `
[
  25,
  24,
  23,
  20,
  19,
  18,
  -1,
  -1,
  -1,
  29,
  28,
  22,
  21,
  27,
  26,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  12,
  11,
  2,
  1,
  0,
  14,
  13,
  10,
  9,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): aaaaaa.cc..cc..bb.CCCCb.b...AAAAA.ABBB.B 1`] = `
[
  34,
  32,
  31,
  30,
  29,
  28,
  -1,
  21,
  20,
  -1,
  -1,
  19,
  18,
  -1,
  -1,
  39,
  37,
  -1,
  12,
  11,
  8,
  7,
  36,
  -1,
  35,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  -1,
  0,
  24,
  22,
  16,
  -1,
  15,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): aaaaaa.cccc..bbCCCCbb...AAAAAABBBB 1`] = `
[
  29,
  28,
  27,
  26,
  25,
  24,
  -1,
  18,
  17,
  16,
  15,
  -1,
  -1,
  33,
  32,
  10,
  9,
  8,
  7,
  31,
  30,
  -1,
  -1,
  -1,
  5,
  4,
  3,
  2,
  1,
  0,
  20,
  19,
  14,
  13,
]
`;

exports[`SecStruct:setPairs (pseudoknotted): aaaaaabbbb......BBBBAAAAAA 1`] = `
[
  25,
  24,
  23,
  22,
  21,
  20,
  19,
  18,
  17,
  16,
  -1,
  -1,
  -1,
  -1,
  -1,
  -1,
  9,
  8,
  7,
  6,
  5,
  4,
  3,
  2,
  1,
  0,
]
`;
